[package]
name = "stellar_remit"
version = "0.1.0"
edition = "2021"

[dependencies]
stellar-base = "=0.6.0"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sodiumoxide = "0.2"
dotenvy = "0.15"
stellar-horizon = "0.7.1"
anyhow = "1.0"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"
tokio-retry = "0.3"
